--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type"   content="text/html; charset=utf-8"  />
+<title>仿仙剑6轮播图</title>
 <script src="js/jquery-2.2.3.min.js"></script>
 <style>
 /*样式重置*/
